--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,8 @@
 [user]
-    name = weiyanlin
-    email = wylin0105@gmail.com
+    #name = weiyanlin
+    #email = wylin0105@gmail.com
+    name = Wei-Yan Lin
+    email = weiyanlin@realtek.com
 [core]
     editor = vim
 [color]
