--- a/.screenrc
+++ b/.screenrc
@@ -3,7 +3,8 @@
 startup_message off
 
 # Set caption always on
-caption always " %{=u .G} %-w%<%{=ub .y}%n %t%{=u .G}%+w "
+#caption always " %{=u .G} %-w%<%{=ub .y}%n %t%{=u .G}%+w "
+caption always " %{=u .G} "
 
 # Set hardstatus always on
 hardstatus alwayslastline " %-Lw%{= bw}%n%f %t%{-}%+Lw %=@%H %Y-%m-%d %0c:%s "
